2011-01-18  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #17041: CSH tooltip often gets in the way of the field it is supposed to provide help for (Thanks to Stanislas Rolland)
	* Fixed bug #16253: Displaced Arrows in TCEforms (Thanks to Jo Hasenau)
	* Fixed bug #16081: Different margins of input fields in TCEforms

2011-01-18  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #17113: Wrong filemount calculation in workspaces for admin users

2011-01-18  Oliver Hader  <oliver.hader@typo3.org>

	* Cleanup: Updated copyright comments

2011-01-18  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #17108: [Scheduler] Make scheduler sample task use SwiftMailer (Thanks to Ernesto Baschny)
	* Fixed bug #17130: [Caching framework] Remove commented code from db backend
	* Fixed bug #12232: [Performance] md5_file() to check if a file has been changed is very expensive (Thanks to André Stösel and Vladimir Podkovanov)
	* Fixed bug #16685: [Performance] Not using table index while deleting cached imagesize (Thanks to Vladimir Podkovanov)
	* Fixed bug #16462: Link field for images is too short to provide links for every image (Thanks to Jo Hasenau)

2011-01-18  Ingo Renner  <ingo@typo3.org>

	* Added feature #17101: [reports] Warning in reports module for enabled PHP safe_mode, credits Christian Kuhn

2011-01-18  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed issue #17014: Update copyright year in constant TYPO3_copyright_year to 2011 
	* Fixed bug #17049: Flexform labels point to wrong checkbox (Thanks to Steffen Gebert)
	* Added feature #13938: Backend session is locked to useragent (Thanks to Bjoern Pedersen, Markus Klein, Helmut Hummel)
	* Follow-up to #15611: Mention the change of behaviour on copy/translate (hidden by default) in NEWS.txt

2011-01-17  Francois Suter  <francois.suter@typo3.org>

	* Fixed bug #17094: Scheduler: Docheader icons should not be underlined

2011-01-17  Steffen Gebert  <steffen@steffen-gebert.de>
