@@ -1,3 +1,7 @@
+2011-01-18  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #16045: htmlArea RTE: Merging table cells using context menu doesn't work in Firefox
+
 2011-01-07  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #16945: htmlArea RTE: Incorrect default tab label in image insertion dialogue
